--- a/.env
+++ b/.env
@@ -1,13 +1,14 @@
 # Variables de entorno para Docker
-MYSQL_HOST=mysql
-MYSQL_PORT=3306
-MYSQL_DATABASE=purchaseorderdb
-MYSQL_USER=root
-MYSQL_PASSWORD=root
-MYSQL_ROOT_PASSWORD=root
 
-# Puerto de la aplicación
-APP_PORT=8083
+# Base de datos MySQL
+DB_ROOT_PASSWORD=root
+DB_NAME=purchaseorderdb
+DB_USER=appuser
+DB_PASSWORD=root
+DB_PORT=3307
+
+# Puerto del servicio (externo)
+SERVICE_PORT=8083
 
 # Perfil de Spring
 SPRING_PROFILES_ACTIVE=docker
