--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,6 +44,21 @@ services:
       - microservices-network
     restart: unless-stopped
 
+  purchaseorder-frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    container_name: purchaseorder-frontend
+    environment:
+      VITE_API_BASE_URL: http://localhost:8083/api/v1
+    ports:
+      - "${FRONTEND_PORT:-3000}:80"
+    depends_on:
+      - purchaseorder-service
+    networks:
+      - microservices-network
+    restart: unless-stopped
+
 networks:
   microservices-network:
     name: microservices-network
@@ -51,3 +66,5 @@ networks:
 
 volumes:
   mysql_purchaseorder_data:
+
+
