--- a/.env
+++ b/.env
@@ -10,5 +10,9 @@ DB_PORT=3307
 # Puerto del servicio (externo)
 SERVICE_PORT=8083
 
+# Puerto del frontend (externo)
+FRONTEND_PORT=3000
+
 # Perfil de Spring
 SPRING_PROFILES_ACTIVE=docker
+
